Add diagrams for mandate notifications

--- a/content/payments/umap/mandates.mdx
+++ b/content/payments/umap/mandates.mdx
@@ -27,21 +27,15 @@ Choose one or more of our products under the UMAP mandates stack to—
 
 #### UPI mandate statuses
 
-A mandate will flow through the below statuses throughout its lifecycle -
+A mandate can have any of the below statuses throughout its life-cycle—
 
-<img
-    src="https://storage.googleapis.com/strapi-assets/latest/Frame_109/Frame_109.png"
-    alt="Bridge"
-/>
-
-`mandate_initiated`&nbsp;A mandate creation request has been initiated. 
-
-`mandate_live` Customer authorisation received & mandate is now active. 
-
-`mandate_complete`&nbsp;Mandate executions are done, and now mandate is closed.  
-
-`mandate_rejected`&nbsp;Due to error or no authorisation, mandate could not be created.   
-
-`mandate_paused`&nbsp;Customer has decided to temporarily stop executions on mandate.   
-
-`mandate_revoked`&nbsp;Mandate was closed by customer or merchant before expiry. 
+<Text>
+    <ul>
+        <li><code>mandate.initiated</code>&nbsp;A mandate creation request has been initiated</li>
+        <li><code>mandate.live</code>&nbsp;Customer authorisation received & mandate is now active</li>
+        <li><code>mandate.rejected</code>&nbsp;Due to error or no authorisation, mandate could not be created</li>
+        <li><code>mandate.paused</code>&nbsp;Customer has decided to temporarily stop executions on mandate</li>
+        <li><code>mandate.revoked</code>&nbsp;Mandate was closed by customer or merchant before expiry</li>
+        <li><code>mandate.complete</code>&nbsp;Mandate executions are done, and now mandate is closed</li>
+    </ul>
+</Text>
