--- a/content/payments/umap/notifications/mandates/create.mdx
+++ b/content/payments/umap/notifications/mandates/create.mdx
@@ -7,7 +7,12 @@ visible_in_sidebar: true
 
 ## Notifications and alerts for creation of mandate
 
-These are the available webhooks for merchants, when they create mandates through UMAP.
+The first step to start utilising mandates is to create a mandate. Here is a quick view of how the status moves from `mandate.initiated` to `mandate.live` or `mandate.failed`—
+
+<img
+    src="https://storage.googleapis.com/strapi-assets/latest/mandate_base_diagram/mandate_base_diagram.svg"
+    alt="Bridge"
+/>
 
 <Tabs
    tabs={[
@@ -16,7 +21,14 @@ These are the available webhooks for merchants, when they create mandates throug
             label: "Mandate creation initiated",
             content: (
                <>
-                  <Text>This indicates that a mandate creation request has been initiated by a customer or the merchant.</Text>
+                  <Text>
+                        This indicates that a mandate creation request has been initiated by a customer or the merchant. The following param values indicate this state—
+                        <ul>
+                            <li><code>operation</code> will be <code>create</code></li>
+                            <li><code>eventType</code> will be <code>mandate_operation.create.initiated</code></li>
+                            <li><code>status</code> will be <code>initiated</code></li>
+                        </ul>
+                    </Text>
                     <CodeBlockWithCopy language="json">
 {`{
    // -----------------
@@ -51,7 +63,14 @@ These are the available webhooks for merchants, when they create mandates throug
             label: "Mandate creation successful",
             content: (
                <>
-                     <Text>This indicates that the customer has received and authorised the mandate request, so the mandate is now active and will be used to collect payments from the customer accordingly to the rules of the mandate.</Text>
+                     <Text>
+                        This indicates that the customer has received and authorised the mandate request, so the mandate is now active and will be used to collect payments from the customer accordingly to the rules of the mandate. The following param values indicate this state—
+                        <ul>
+                            <li><code>operation</code> will be <code>create</code></li>
+                            <li><code>eventType</code> will be <code>mandate_operation.create.success</code></li>
+                            <li><code>status</code> will be <code>success</code></li>
+                        </ul>
+                     </Text>
                      <CodeBlockWithCopy language="json">
 {`{
    // -----------------
@@ -86,7 +105,14 @@ These are the available webhooks for merchants, when they create mandates throug
             label: "Mandate creation failed",
             content: (
                <>
-                     <Text>This is sent if mandate could not be created, due to some error or no authorisation from customer.</Text>
+                     <Text>
+                        This is sent if mandate could not be created, due to some error or no authorisation from customer. The following param values indicate this state—
+                        <ul>
+                            <li><code>operation</code> will be <code>create</code></li>
+                            <li><code>eventType</code> will be <code>mandate_operation.create.success</code></li>
+                            <li><code>status</code> will be <code>success</code></li>
+                        </ul>
+                     </Text>
                      <CodeBlockWithCopy language="json">
 {`{
    // -----------------
