--- a/content/payments/umap/notifications/mandates/pause.mdx
+++ b/content/payments/umap/notifications/mandates/pause.mdx
@@ -13,7 +13,12 @@ visible_in_sidebar: true
 
 <hr class="primary" />
 
-These are the available webhooks for merchants, when their customers attempt to pause their mandate (which can be a temporary action).
+These are the available webhooks for merchants, when their customers attempt to pause their mandate (which can be a temporary action). Here is a quick view of how the status moves from `mandate.live` to `mandate.paused`—
+
+<img
+    src="https://storage.googleapis.com/strapi-assets/latest/mandate_pause/mandate_pause.svg"
+    alt="Bridge"
+/>
 
 <Tabs
    tabs={[
@@ -25,6 +30,7 @@ These are the available webhooks for merchants, when their customers attempt to 
                     <Text>
                         The following param values indicate this state—
                         <ul>
+                            <li><code>operation</code> will be <code>pause</code></li>
                             <li><code>eventType</code> will be <code>mandate_operation.pause.initiated</code></li>
                             <li><code>status</code> will be <code>initiated</code></li>
                         </ul>
@@ -61,6 +67,7 @@ These are the available webhooks for merchants, when their customers attempt to 
                     <Text>
                         The following param values indicate this state—
                         <ul>
+                            <li><code>operation</code> will be <code>pause</code></li>
                             <li><code>eventType</code> will be <code>mandate_operation.pause.success</code></li>
                             <li><code>status</code> will be <code>success</code></li>
                         </ul>
@@ -97,6 +104,7 @@ These are the available webhooks for merchants, when their customers attempt to 
                     <Text>
                         The following param values indicate this state—
                         <ul>
+                            <li><code>operation</code> will be <code>pause</code></li>
                             <li><code>eventType</code> will be <code>mandate_operation.pause.failed</code></li>
                             <li><code>status</code> will be <code>failed</code></li>
                         </ul>
