--- a/content/payments/umap/notifications/mandates/revoke.mdx
+++ b/content/payments/umap/notifications/mandates/revoke.mdx
@@ -13,7 +13,12 @@ visible_in_sidebar: true
 
 <hr class="primary" />
 
-These are the available webhooks for merchants, when revoking of mandate is done by either the customer or in rarer cases, the merchant.
+These are the available webhooks for merchants, when revoking of mandate is done by either the customer or in rarer cases, the merchant. Here is a quick view of how the status moves from `mandate.live` to `mandate.revoked`—
+
+<img
+    src="https://storage.googleapis.com/strapi-assets/latest/mandate_unpause/mandate_unpause.svg"
+    alt="Bridge"
+/>
 
 <Tabs
    tabs={[
