--- a/content/payments/umap/notifications/mandates/unpause.mdx
+++ b/content/payments/umap/notifications/mandates/unpause.mdx
@@ -12,7 +12,12 @@ visible_in_sidebar: true
 
 <hr class="primary" />
 
-These are the available webhooks for merchants, when their customer unpauses their mandate.
+These are the available webhooks for merchants, when their customer unpauses their mandate. Here is a quick view of how the status moves from `mandate.paused` to `mandate.unpaused`—
+
+<img
+    src="https://storage.googleapis.com/strapi-assets/latest/mandate_unpause/mandate_unpause.svg"
+    alt="Bridge"
+/>
 
 <Tabs
    tabs={[
@@ -24,6 +29,7 @@ These are the available webhooks for merchants, when their customer unpauses the
                     <Text>
                         The following param values indicate this state—
                         <ul>
+                            <li><code>operation</code> will be <code>unpause</code></li>
                             <li><code>eventType</code> will be <code>mandate_operation.unpause.initiated</code></li>
                             <li><code>status</code> will be <code>initiated</code></li>
                         </ul>
@@ -60,6 +66,7 @@ These are the available webhooks for merchants, when their customer unpauses the
                     <Text>
                         The following param values indicate this state—
                         <ul>
+                            <li><code>operation</code> will be <code>unpause</code></li>
                             <li><code>eventType</code> will be <code>mandate_operation.unpause.success</code></li>
                             <li><code>status</code> will be <code>success</code></li>
                         </ul>
@@ -96,6 +103,7 @@ These are the available webhooks for merchants, when their customer unpauses the
                     <Text>
                         The following param values indicate this state—
                         <ul>
+                            <li><code>operation</code> will be <code>unpause</code></li>
                             <li><code>eventType</code> will be <code>mandate_operation.unpause.failed</code></li>
                             <li><code>status</code> will be <code>failed</code></li>
                         </ul>
