--- a/content/payments/umap/notifications/mandates/update.mdx
+++ b/content/payments/umap/notifications/mandates/update.mdx
@@ -13,7 +13,12 @@ visible_in_sidebar: true
 
 <hr class="primary" />
 
-Merchant webhooks for mandates being updated through UMAP.
+Here is a quick view of how the status moves from `mandate.live` to `mandate.updated`—
+
+<img
+    src="https://storage.googleapis.com/strapi-assets/latest/mandate_update/mandate_update.svg"
+    alt="Bridge"
+/>
 
 <Tabs
    tabs={[
