--- a/content/payments/umap/notifications/mandates.mdx
+++ b/content/payments/umap/notifications/mandates.mdx
@@ -14,20 +14,18 @@ visible_in_sidebar: true
 
 <hr class="primary" />
 
-Here is the expected life-cycle of statuses—
-<img
-    src="https://storage.googleapis.com/strapi-assets/latest/Frame_109/Frame_109.png"
-    alt="Bridge"
-/>
-
-<hr class="primary" />
-
 ### Details for mandate statuses
 Below is a list mandate statuses that are uniform across all types of mandates. Notifications corresponding to them are sent after relevant operations are taken on the mandate by either a merchant, or their customer.
 
+Here is the expected life-cycle of a mandate—
+<img
+    src="https://storage.googleapis.com/strapi-assets/latest/mandate_base_diagram/mandate_base_diagram.svg"
+    alt="Bridge"
+/>
+
+A quick summary of the general statuses associated with a mandate—
 <Text>
     <ul>
-        
         <li><code>mandate.initiated</code>{" "}A customer or merchant has initiated creation of mandate</li>
         <li><code>mandate.live</code>{" "}Customer has authorised the mandate, and the mandate is active</li>
         <li><code>mandate.rejected</code>{" "}The mandate could not be set up, due to some error or due to the customer not authorising the mandate</li>
@@ -41,9 +39,9 @@ Below is a list mandate statuses that are uniform across all types of mandates. 
 <hr class="primary" />
 
 ### Available actions against a mandate
-A merchant or a customer can initiate different operations against a mandate. A combination of this and the aboves statuses are used to notify merchants about specific updates to mandate statuses. 
+A merchant or a customer can initiate different actions against a mandate. A combination of this and the aboves statuses are used to notify merchants about specific updates to mandate statuses. 
 
-These scenarios are described in more detail under each of the following operation—
+These scenarios are described in more detail under each of the following actions—
 - **<a href="/payments/umap/notifications/mandates/create">Create mandate ↗</a>**
 - **<a href="/payments/umap/notifications/mandates/update">Update mandate ↗</a>**
 - **<a href="/payments/umap/notifications/mandates/pause">Pause mandate↗</a>**
