--- a/content/payments/billpay/pre-built-screens/webhooks.mdx
+++ b/content/payments/billpay/pre-built-screens/webhooks.mdx
@@ -231,7 +231,7 @@ Below are the parameter tables and sample payloads for the listed events. Note t
             {`{
     "mobileNumber": "9481773053",
     "status": "FETCH_FAILURE",
-    "billId": "69a1fbc0-b5d1-4cbf-ac6d-c4244e3e7e0c",
+    "billId": "",
     "billerId": "MAHI00000NATIC",
     "billerName": "Mahindra Rural Housing Finance Ltd",
     "billerCategory": "Loan-Repayment",
