--- a/content/payments/billpay/api-integration/quickstart.mdx
+++ b/content/payments/billpay/api-integration/quickstart.mdx
@@ -89,7 +89,7 @@ It is recommended that you set up a callback URL to receive notifications for va
 -   APIs to raise disputes against a payment
 -   APIs to receive an automatic bill due notification
 
-When this is enabled by you, any successful `fetch`, `validate`, `payment`, `dispute` or `autofetch` event gets posted to your callback URL.
+When this is enabled by you, any successful `fetch`, `validate`, `payment` or `dispute` event gets posted to your callback URL.
 
 You may specify only one callback URL. **This should be a valid URI string that starts with either `https://` or `http://` scheme.**. For e.g., `https://my-billpay-callback.com`.
 
@@ -101,7 +101,6 @@ Setu will append the following default paths to this callback URL, to alert your
 | `validate` bill details | `/bills/validate/response`  |
 | `payment` of bill       | `/bills/payment/response`   |
 | `dispute` against bill  | `/bills/dispute/response`   |
-| `autofetch` of a bill   | `/bills/autofetch/response` |
 
 <br />
 <br />
