add onpages count warning

--- a/content/data/estamp/quickstart.mdx
+++ b/content/data/estamp/quickstart.mdx
@@ -126,6 +126,10 @@ Here is a quick description of the additionl values required to use for estamp w
                     "status": "sign_initiated" 
                 } `}
               </CodeBlockWithCopy>
+              <Callout type="warning">
+                    You can add one extra count to onPages 
+                    field to account for the stmap page.
+                </Callout>
               </details>
               </Card>
             </>
