--- a/content/data/estamp/quickstart.mdx
+++ b/content/data/estamp/quickstart.mdx
@@ -17,7 +17,7 @@ All features of the setu esign is available in Estamp flow as well.
 
 ### What can I do with this product?
 
-Offer your customers a seamless experience of Aadhaar based electronic signatures on goverment issuesd stmaps.
+Offer your customers a seamless experience of Aadhaar based electronic signatures on goverment issuesd stamps.
 
 Whichever industry you belong to—banking, insurance, finance, law and more—you can provide 
 smooth onboarding experiences for your customers and enable contracts to be closed digitally.
