iterate pavan's recommended changes

--- a/content/data/esign/estamp.mdx
+++ b/content/data/esign/estamp.mdx
@@ -1,62 +1,62 @@
 ---
 sidebar_title: Overview
-page_title: Estamp overview
-order: 1
+page_title: eStamp overview
+order: 7
 visible_in_sidebar: true
 ---
 
-## Estamp
+## Setu eStamp
 
-### What is Estamp?
+### What is eStamp?
 
-Our Estamp solution enable easy aquisition of offline Estamps.  
+Our eStamp solution enable easy aquisition of offline eStamps.  
 Attach it to a document and perform aadhaar based electronic signature on top of it.
 
-All features of the setu esign is available in Estamp flow as well.
+All features of the setu esign is available in eStamp flow as well.
 <hr class="primary" />
 
 ### What can I do with this product?
+Setu Aadhaar-Based eSign gateway supports adding government stamp duty on the fly. 
+Our eSign APIs empower you to collect legally bound aadhaar based eSign while adding government 
+stamp duties ensuring compliance and security on documents from signers. With these APIs, you can streamline your 
+customer onboarding process and close contracts digitally, all while providing a frictionless experience
 
-Offer your customers a seamless experience of Aadhaar based electronic signatures on goverment issuesd stamps.
+## Setu eStamp integration
 
-Whichever industry you belong to—banking, insurance, finance, law and more—you can provide 
-smooth onboarding experiences for your customers and enable contracts to be closed digitally.
+To use eStamp solution
 
-## Setu Estamp integration
-
-To use estamp solution
-
-1. **Raise estamp aquire request to Setu integeration team**—Raise request for count of stamps you need.
+1. **Raise eStamp aquire request to Setu team (support@setu.co)** —Raise request for count, value and Indian state of the stamp duty needed.
 2. **Create signature request and complete signing**— Use the esigning flow to complete signing and download signed document.
 
 
 ### Flow of API calls
-
-Read more about the flow of API calls in esign <a href="/data/esign/quickstart">here</a>
+Creating a eStamp request is same as creating a signature request.
+The flow of api calls is mentioned <a href="/data/esign/quickstart">here.</a>
 
 
 <br/>
 
-#### Create Signature request with estmap
+#### Create Signature request with eStamp
 
 
-Signature request can be creared with defined estamp value 
-and state. This stamp will be attached to the document that you upload for singing.
+Signature request can be creared with defined eStamp value 
+and indian state. This eStamp will be attached to the document that you upload for signing.
 <br/>
 
-Here is a quick description of the additionl values required to use for estamp while signing—
+Here is a quick description of the additional values required, to be passed for signing a document with eStamp.
 
-- `estampState` the state of the stamp.
-- `estampValue` the value of the stamp 
-- `estampMergePosition` supported values are -1 and 0 -1 indicates at the end, 0 is to merge the stamp at start of document
+- `eStampState` the Indian state of the eStamp.
+- `eStampValue` the value of the eStamp 
+- `eStampMergePosition` supported values are -1 and 0. -1 indicates that eStamp pdf would be merged at end of document, 0 indicates the eStamp pdf will be merged at the start of the document.
 
 <hr class="tertiary" />
 
 <Callout type="tip">
-    You can use estmap with other esign flow as well 
+    You can use eStmap with other esign flows as well, 
     <code>flexible with configId </code>  
-    <code>esign with pre defined positions</code>top-right, top-left, bottom-right, bottom-left 
+    <code>esign with pre defined positions</code>top-right, top-left, bottom-right, bottom-left,
     <code>esign with templating</code>  
+    <a href="/data/esign/overview">read here for more details</a>,
 </Callout>
 
 
@@ -68,7 +68,7 @@ Here is a quick description of the additionl values required to use for estamp w
           label: "201",
           content: (
             <>
-            <Text size="small" weight="600">Esign with estamp</Text>
+            <Text size="small" weight="600">Esign with eStamp</Text>
             <Card padding="nano" shape="rounded" marginBottom="micro">
   <details>
     <summary>
@@ -83,9 +83,9 @@ Here is a quick description of the additionl values required to use for estamp w
                 { 
                   "documentId": "67e0ca30-49e4-4883-86f9-3762f0e6798c", 
                   "redirectUrl": "your-redirect-url.com?other_keys=youcandefinehere", 
-                  "estampState": 17,
-                  "estampValue": 50,
-                  "estampMergePosition": 0,
+                  "eStampState": 17,
+                  "eStampValue": 50,
+                  "eStampMergePosition": 0,
                   "signers": [{ 
                       "identifier": "9876543210", 
                       "displayName": "John Doe", 
@@ -111,9 +111,9 @@ Here is a quick description of the additionl values required to use for estamp w
                     "documentId": "67e0ca30-49e4-4883-86f9-3762f0e6798c", 
                     "id": "cb80bfb4-d163-426e-ad57-1fd8889e62d4", 
                     "redirectUrl": "your-redirect-url.com?other_keys=youcandefinehere", 
-                    "estampState": 17,
-                    "estampValue": 50,
-                    "estampMergePosition": 0,
+                    "eStampState": 17,
+                    "eStampValue": 50,
+                    "eStampMergePosition": 0,
                     "signers": [{ 
                             "displayName": "John Doe", 
                             "birthYear": "1988", //included if specified in Create signature request API
@@ -121,14 +121,15 @@ Here is a quick description of the additionl values required to use for estamp w
                             "identifier": "9876543210", 
                             "signatureDetails": null, 
                             "status": "pending", 
-                            "url": "https://dg-uat.setu.co/signature/preview?requestId=6bae9d1f-0fa6-44e5-a801-3ad4a5f10a12&signerId=34f94af1-a8b9-4797-b287-c5ef7bff99a1" 
+                            "url": "https://dg-uat.setu.co/signature/estamp/preview?requestId=6bae9d1f-0fa6-44e5-a801-3ad4a5f10a12&signerId=34f94af1-a8b9-4797-b287-c5ef7bff99a1" 
                     }], 
                     "status": "sign_initiated" 
                 } `}
               </CodeBlockWithCopy>
               <Callout type="warning">
-                    You can add one extra count to onPages 
-                    field to account for the stmap page.
+                    You can add one extra count to <code>onPages</code> 
+                    field in create signature request body 
+                    to account for the one extra page created by merging eStamp.
                 </Callout>
               </details>
               </Card>
@@ -140,7 +141,7 @@ Here is a quick description of the additionl values required to use for estamp w
 
 <hr class="primary" />
 
-## Supported state and their code
+## Supported Indian state and their code
 
 <table>
 <tr><th>State Code</th><th>State Name</th></tr>
@@ -183,10 +184,17 @@ Here is a quick description of the additionl values required to use for estamp w
 </table>
 
 
-## Supported estamp value
-The supported estamp values/denomination are:
+## Supported eStamp value
+The supported eStamp values/denomination are:
 <p>
   <p>20, 50, 100, 200, 300, 400, 500</p>
+</p>
+
+<br/>
+<br/>
+
+<p>
+Please reach out to support@setu.co for any other denominations. 
 </p>
 
 
