move estamp under esing section

--- a/content/data/esign/estamp.mdx
+++ b/content/data/esign/estamp.mdx
@@ -9,29 +9,32 @@ visible_in_sidebar: true
 
 ### What is eStamp?
 
-Our eStamp solution enable easy aquisition of offline eStamps.  
-Attach it to a document and perform aadhaar based electronic signature on top of it.
 
-All features of the setu esign is available in eStamp flow as well.
+Setu eStamp enables easy acquisition of offline eStamps.
+Attach it to a document and perform Aadhaar-based esign on top of it.
+
+eStamp is a flow under esign and all features are interoperable.
+
 <hr class="primary" />
 
 ### What can I do with this product?
-Setu Aadhaar-Based eSign gateway supports adding government stamp duty on the fly. 
-Our eSign APIs empower you to collect legally bound aadhaar based eSign while adding government 
-stamp duties ensuring compliance and security on documents from signers. With these APIs, you can streamline your 
-customer onboarding process and close contracts digitally, all while providing a frictionless experience
+
+Setu Aadhaar-Based eSign gateway supports adding government stamp duty on the fly.
+Our eSign APIs empower you to collect legally bound Aadhaar-based eSignatures while adding government
+stamp duties, ensuring compliance and security on documents from signers. With these APIs, you can streamline your
+customer onboarding process and close contracts digitally, all while providing a frictionless experience.
 
 ## Setu eStamp integration
 
-To use eStamp solution
+To use the eStamp solution:
 
-1. **Raise eStamp aquire request to Setu team (support@setu.co)** —Raise request for count, value and Indian state of the stamp duty needed.
-2. **Create signature request and complete signing**— Use the esigning flow to complete signing and download signed document.
+1. **Raise eStamp acquire request to Setu team (support@setu.co)** — Raise a request for count, value, and Indian state of the stamp duty needed.
+2. **Create signature request and complete signing** — Use the eSigning flow to complete signing and download the signed document.
 
 
 ### Flow of API calls
-Creating a eStamp request is same as creating a signature request.
-The flow of api calls is mentioned <a href="/data/esign/quickstart">here.</a>
+Creating an eStamp request is the same as creating a signature request.
+The flow of API calls is mentioned <a href="/data/esign/quickstart">here.</a>
 
 
 <br/>
@@ -39,25 +42,26 @@ The flow of api calls is mentioned <a href="/data/esign/quickstart">here.</a>
 #### Create Signature request with eStamp
 
 
-Signature request can be creared with defined eStamp value 
-and indian state. This eStamp will be attached to the document that you upload for signing.
+A Signature request can be created with defined eStamp value
+and Indian state. This eStamp will be attached to the document that you upload for signing.
 <br/>
 
-Here is a quick description of the additional values required, to be passed for signing a document with eStamp.
+Here is a quick description of the additional values required to be passed for signing a document with eStamp:
 
 - `eStampState` the Indian state of the eStamp.
-- `eStampValue` the value of the eStamp 
-- `eStampMergePosition` supported values are -1 and 0. -1 indicates that eStamp pdf would be merged at end of document, 0 indicates the eStamp pdf will be merged at the start of the document.
+- `eStampValue` the value of the eStamp
+- `eStampMergePosition` supported values are -1 and 0. -1 indicates that the eStamp PDF would be merged at the end of the document, 0 indicates the eStamp PDF will be merged at the start of the document.
 
 <hr class="tertiary" />
 
 <Callout type="tip">
-    You can use eStmap with other esign flows as well, 
-    <code>flexible with configId </code>  
-    <code>esign with pre defined positions</code>top-right, top-left, bottom-right, bottom-left,
+    You can use eStamps with other eSign flows as well,
+    <code>flexible with configId</code>  
+    <code>esign with predefined positions</code> top-right, top-left, bottom-right, bottom-left,
     <code>esign with templating</code>  
     <a href="/data/esign/overview">read here for more details</a>,
 </Callout>
+
 
 
 
