correct end point

--- a/content/data/esign/estamp.mdx
+++ b/content/data/esign/estamp.mdx
@@ -82,7 +82,7 @@ Here is a quick description of the additional values required to be passed for s
               <hr className="tertiary" />
               <h5>Request</h5>
               <CodeBlockWithCopy language="json">
-                {`POST /api/signature 
+                {`POST /api/signature/estamp 
                 
                 { 
                   "documentId": "67e0ca30-49e4-4883-86f9-3762f0e6798c", 
