Update order and sidebar title

--- a/content/data/esign/estamp.mdx
+++ b/content/data/esign/estamp.mdx
@@ -1,5 +1,5 @@
 ---
-sidebar_title: Overview
+sidebar_title: eStamp overview
 page_title: eStamp overview
 order: 2
 visible_in_sidebar: true
@@ -84,26 +84,26 @@ Here is a quick description of the additional values required to be passed for s
               <CodeBlockWithCopy language="json">
                 {`POST /api/signature/estamp 
                 
-                { 
-                  "documentId": "67e0ca30-49e4-4883-86f9-3762f0e6798c", 
-                  "redirectUrl": "your-redirect-url.com?other_keys=youcandefinehere", 
-                  "eStampState": 17,
-                  "eStampValue": 50,
-                  "eStampMergePosition": 0,
-                  "signers": [{ 
-                      "identifier": "9876543210", 
-                      "displayName": "John Doe", 
-                      "birthYear": "1988",
-                      "signature": { 
-                          "onPages": [ 
-                              "1" 
-                          ], 
-                          "position": "bottom-left", 
-                          "height": 60, 
-                          "width": 180 
-                      } 
-                  }] 
-                } `}
+{ 
+    "documentId": "67e0ca30-49e4-4883-86f9-3762f0e6798c", 
+    "redirectUrl": "your-redirect-url.com?other_keys=youcandefinehere", 
+    "eStampState": 17,
+    "eStampValue": 50,
+    "eStampMergePosition": 0,
+    "signers": [{ 
+        "identifier": "9876543210", 
+        "displayName": "John Doe", 
+        "birthYear": "1988",
+        "signature": { 
+            "onPages": [ 
+                "1" 
+            ], 
+            "position": "bottom-left", 
+            "height": 60, 
+            "width": 180 
+        } 
+    }] 
+} `}
               </CodeBlockWithCopy>
               <hr className="tertiary" />
               <h5>Response</h5>
@@ -190,16 +190,12 @@ Here is a quick description of the additional values required to be passed for s
 
 ## Supported eStamp value
 The supported eStamp values/denomination are:
-<p>
-  <p>20, 50, 100, 200, 300, 400, 500</p>
-</p>
+
+  `20`, `50`, `100`, `200`, `300`, `400`, `500`
 
 <br/>
-<br/>
 
-<p>
 Please reach out to support@setu.co for any other denominations. 
-</p>
 
 
 <WasPageHelpful />
