Rename Setu BAV to Penny drop + PennyLess

--- a/content/data/bav/pennydrop-pennyless.mdx
+++ b/content/data/bav/pennydrop-pennyless.mdx
@@ -1,5 +1,5 @@
 ---
-sidebar_title: Setu BAV
+sidebar_title: Penny drop + PennyLess
 page_title: Bank account verification using Setu BAV
 order: 2
 visible_in_sidebar: true
