--- a/content/data/bav/reverse-penny-drop.mdx
+++ b/content/data/bav/reverse-penny-drop.mdx
@@ -1,5 +1,5 @@
 ---
-sidebar_title: Reverse penny drop
+sidebar_title: Reverse Penny drop
 page_title: BAV using reverse penny drop
 order: 3
 visible_in_sidebar: true
