Update content from Setu BAV

--- a/content/data/bav/pennydrop-pennyless/api-integration.mdx
+++ b/content/data/bav/pennydrop-pennyless/api-integration.mdx
@@ -1,18 +1,18 @@
 ---
 sidebar_title: API Integration
-page_title: Setu BAV API Integration
+page_title: Penny drop + PennyLess API Integration
 order: 1
 visible_in_sidebar: true
 ---
 
-## Setu BAV API Integration
+## Penny drop + PennyLess API Integration
 
-The following guide describes an Setu BAV implementation of our bank account verification APIs. This lets you initiate a verification request and let it complete asynchronously—without having to wait for an immediate response and it generates webhook when bank account verification is completed.
+The following guide describes an Penny drop + PennyLess implementation of our bank account verification APIs. This lets you initiate a verification request and let it complete asynchronously—without having to wait for an immediate response and it generates webhook when bank account verification is completed.
 
 You will need the following 2 APIs—
 
--   **Create Setu BAV**—This lets you initiate a verification request.
--   **GET Setu BAV details**—This lets you check the status associated with the verification request.
+-   **Create Penny drop + PennyLess**—This lets you initiate a verification request.
+-   **GET Penny drop + PennyLess details**—This lets you check the status associated with the verification request.
 
 Here are the URLs you would need for this integration—
 
@@ -25,7 +25,7 @@ Here are the URLs you would need for this integration—
 
 <hr class="primary" />
 
-### Create Setu BAV
+### Create Penny drop + PennyLess
 
 Call this API to initiate bank account verification of your customer. A quick explanation of the request params—
 
@@ -34,7 +34,6 @@ Call this API to initiate bank account verification of your customer. A quick ex
 
 <Callout type="tip">
   Sample account number and ifsc for Sandbox.
-
 
 -   accountNumber:1234567890, ifsc:UTIB0002083 - Successful Verification Type 1 (PennyLess Drop)
 -   accountNumber:1234567891, ifsc:UTIB0002083 - Successful Verification Type 2 (PennyLess Drop)
@@ -114,7 +113,7 @@ Call this API to initiate bank account verification of your customer. A quick ex
  
 {
     "error": {
-        "code": "BAVM1", // Setu BAVCode
+        "code": "BAVM1", // Penny drop + PennyLessCode
         "detail": "Either ifsc or bank account is invalid",
         "traceId": "f8d0e4f2-674f-4192-863a-6e9c1f595bc3"
     }
@@ -182,7 +181,7 @@ Call this API to initiate bank account verification of your customer. A quick ex
 
 <hr class="primary" />
 
-### GET Setu BAV details
+### GET Penny drop + PennyLess details
 
 Call this API to know verification status of request that was previously initiated, against the `id` associated with it.
 
@@ -393,8 +392,8 @@ Call this API to know verification status of request that was previously initiat
                                         <CodeBlockWithCopy language="json">
                                             {`{
     "error": {
-        "code": "BAV52", // Setu BAVCODE
-        "detail": "Invalid account", // Setu BAVCODE description
+        "code": "BAV52", // Penny drop + PennyLessCODE
+        "detail": "Invalid account", // Penny drop + PennyLessCODE description
         "traceId": "38e6b7c5-7e64-47b0-975b-26bf07efbc58"
     }
 }`}
@@ -436,7 +435,7 @@ Call this API to know verification status of request that was previously initiat
                                             {`{
     "error": {
         "code": "BAV2000", // or BAV2001 for internal error
-        "detail": "Upsteam error", // Setu BAVCODE description
+        "detail": "Upsteam error", // Penny drop + PennyLessCODE description
         "traceId": "38e6b7c5-7e64-47b0-975b-26bf07efbc58"
     }
 }`}
@@ -487,7 +486,7 @@ Call this API to know verification status of request that was previously initiat
 
 ### Get notified via webhook
 
-As soon as Setu BAV compelete (success or failed). Setu triggers a near realtime notification via webhook mechanism.
+As soon as Penny drop + PennyLess compelete (success or failed). Setu triggers a near realtime notification via webhook mechanism.
 See <a href="./notifications" target="_blank">Notifications</a> page for more information
 
 <WasPageHelpful />
