--- a/content/data/bav/pennydrop-pennyless.mdx
+++ b/content/data/bav/pennydrop-pennyless.mdx
@@ -1,6 +1,6 @@
 ---
 sidebar_title: Penny drop + PennyLess
-page_title: Bank account verification using Setu BAV
+page_title: Bank account verification using Penny drop + PennyLess
 order: 2
 visible_in_sidebar: true
 ---
