--- a/content/data/bav/pennydrop-pennyless/notifications.mdx
+++ b/content/data/bav/pennydrop-pennyless/notifications.mdx
@@ -1,13 +1,13 @@
 ---
 sidebar_title: Notifications
-page_title: Setu BAV Notifications
+page_title: Penny drop + PennyLess Notifications
 order: 2
 visible_in_sidebar: true
 ---
 
 ## Notifications
 
-Below is the summary of the notifications which need to be processed on your server by exposing an endpoint for Setu to send an HTTP POST request. These notifications are sent by Setu when the Setu BAV request is completed
+Below is the summary of the notifications which need to be processed on your server by exposing an endpoint for Setu to send an HTTP POST request. These notifications are sent by Setu when the Penny drop + PennyLess request is completed
 
 <Callout type="tip">
     Please send back an HTTP 2xx status code if the request sent was processed
@@ -20,7 +20,7 @@ This will help you understand the notification flow before you start to implemen
 
 ### Notification Samples
 
-Here’s a sample notification of a successful Setu BAV request, with the corresponding request `id` as well as the details of the account holder.
+Here’s a sample notification of a successful Penny drop + PennyLess request, with the corresponding request `id` as well as the details of the account holder.
 
 <CodeBlockWithCopy language="json">
     {`{
@@ -78,7 +78,7 @@ Here’s a sample notification of a successful Setu BAV request, with the corres
 
 <hr class="tertiary" />
 
-Here is a sample notification of a failed Setu BAV request, with the corresponding request `id` as well as the reason for failure.
+Here is a sample notification of a failed Penny drop + PennyLess request, with the corresponding request `id` as well as the reason for failure.
 
 <CodeBlockWithCopy language="json">
     {`
