add doc of  webhook authentication config

--- a/content/data/bav/reverse-penny-drop/api-integration.mdx
+++ b/content/data/bav/reverse-penny-drop/api-integration.mdx
@@ -345,6 +345,11 @@ Below are the summary of the notifications which need to be processed on your se
     event. Response body is ignored.
 </Callout>
 
+<br/>
+
+Setu provides webhook authentication. For more details, refer to <a href="data/bav/reverse-penny-drop/webhook-authentication" target="_blank">webhook-authentication</a>
+
+
 <hr className="tertiary" />
 
 ##### 1. RPD_VERIFICATION_UPDATE Webhook
