correct uppercase S in estmap fields

--- a/content/data/esign/estamp.mdx
+++ b/content/data/esign/estamp.mdx
@@ -87,9 +87,9 @@ Here is a quick description of the additional values required to be passed for s
 { 
     "documentId": "67e0ca30-49e4-4883-86f9-3762f0e6798c", 
     "redirectUrl": "your-redirect-url.com?other_keys=youcandefinehere", 
-    "eStampState": 17,
-    "eStampValue": 50,
-    "eStampMergePosition": 0,
+    "estampState": 17,
+    "estampValue": 50,
+    "estampMergePosition": 0,
     "signers": [{ 
         "identifier": "9876543210", 
         "displayName": "John Doe", 
