add retry context and update menuItems

--- a/content/data/bav/reverse-penny-drop/api-integration.mdx
+++ b/content/data/bav/reverse-penny-drop/api-integration.mdx
@@ -337,7 +337,7 @@ This API lets you test the end to end flow without an actual payment. This will 
 
 #### Notifications / Webhooks
 
-Below are the summary of the notifications which need to be processed on your server by exposing an endpoint for Setu to send an HTTP POST request.
+Below are the summary of the notifications which need to be processed on your server by exposing an endpoint for Setu to send an HTTP POST request with 5 exponential backoff retries
 
 <Callout type="tip">
     Please send back HTTP 200 status code if the request sent was processed
