Changes to the order in sidebar

--- a/content/data/bav/reverse-penny-drop/api-integration.mdx
+++ b/content/data/bav/reverse-penny-drop/api-integration.mdx
@@ -367,8 +367,10 @@ _`accountType` can be `BANK_ACCOUNT`, `PPI` or `UNKNOWN`_
     instrument and for majority of the use cases consider it an invalid bank
     account since money movement doesn't happen when trying to deposit an amount
     through IMPS/NEFT/RTGS. There can be PPI instruments which come up as
-    `UNKNOWN`, please notify us at support@setu.co.
+    <code>UNKNOWN</code>, please notify us at [support@setu.co](support@setu.co)
 </Callout>
+
+<br/>
 
 
 _`bankAccountType` is an optional data field, you may not receive the value always. (Please contact with Setu team to know more about this feature.)_
