add doc of webhook authentication config (#172)
* add doc of  webhook authentication config

* add retry context and update menuItems

* Changes to the order in sidebar

* Update menu items

---------

Co-authored-by: Prabal Tikeriha <monicaevgene@Setus-MacBook-Pro.local>
Co-authored-by: Aditya Gannavarapu <adityagannavarapu.67@gmail.com>

--- a/content/data/bav/reverse-penny-drop/api-integration.mdx
+++ b/content/data/bav/reverse-penny-drop/api-integration.mdx
@@ -337,13 +337,18 @@ This API lets you test the end to end flow without an actual payment. This will 
 
 #### Notifications / Webhooks
 
-Below are the summary of the notifications which need to be processed on your server by exposing an endpoint for Setu to send an HTTP POST request.
+Below are the summary of the notifications which need to be processed on your server by exposing an endpoint for Setu to send an HTTP POST request with 5 exponential backoff retries
 
 <Callout type="tip">
     Please send back HTTP 200 status code if the request sent was processed
     correctly to avoid receiving multiple notifications for the same payment
     event. Response body is ignored.
 </Callout>
+
+<br/>
+
+Setu provides webhook authentication. For more details, refer to <a href="data/bav/reverse-penny-drop/webhook-authentication" target="_blank">webhook-authentication</a>
+
 
 <hr className="tertiary" />
 
@@ -362,8 +367,10 @@ _`accountType` can be `BANK_ACCOUNT`, `PPI` or `UNKNOWN`_
     instrument and for majority of the use cases consider it an invalid bank
     account since money movement doesn't happen when trying to deposit an amount
     through IMPS/NEFT/RTGS. There can be PPI instruments which come up as
-    `UNKNOWN`, please notify us at support@setu.co.
+    <code>UNKNOWN</code>, please notify us at [support@setu.co](support@setu.co)
 </Callout>
+
+<br/>
 
 
 _`bankAccountType` is an optional data field, you may not receive the value always. (Please contact with Setu team to know more about this feature.)_
